Fixed some IDE (Eclipse) warnings