@@ -78,6 +78,6 @@ public final class IdTransientid extends Id {
 	 * @return -1, 0, 1
 	 */
 	public int compareTo(final IdTransientid id) {
-		return new Integer(this.reference.hashCode()).compareTo(new Integer(id.reference.hashCode()));
+		return Integer.valueOf(this.reference.hashCode()).compareTo(Integer.valueOf(id.reference.hashCode()));
 	}
 }
